--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask==2.1.1
 Flask-Compress==1.11
 Flask-Login==0.6.1
 Flask-SQLAlchemy==2.5.1
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
 ipython==8.3.0
